--- a/web/src/index.css
+++ b/web/src/index.css
@@ -8,7 +8,7 @@
   --light-color: #F5F5F5;
 }
 
-html, body {
+html, body, h1 {
   margin: 0;
   padding:0;
 }
@@ -34,16 +34,6 @@ a {
 a {
   text-decoration: none;
 }
-button {
-  outline: none;
-  border: none;
-  cursor: pointer;
-  background-color: var(--primary-color);
-  color: var(--light-color);
-}
-button:hover {
-  background-color: var(--primary-hover-color);
-}
 
 
 /* NavBar */
@@ -64,3 +54,90 @@ button:hover {
 .main-navbar .text-logo:hover {
   color: var(--secondary-color);
 } 
+
+
+/* Home Page */
+.home-container {
+  padding-top: 100px;
+  height: calc(100vh - 254px);
+}
+
+.home-content {
+  display: flex;
+  justify-content: center;
+}
+
+.home-title {
+  font-weight: bold;
+  font-size: 55px;
+  line-height: 58px;
+  letter-spacing: -0.015em;
+  color: var(--dark-color);
+  margin-bottom: 40px !important;
+}
+
+.home-subtitle {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 33px;
+  letter-spacing: -0.015em;
+  color: var(--secondary-color);
+  margin-bottom: 30px;
+}
+
+.home-btn-order {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  height: 70px;
+  width: 235px;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 24px;
+  letter-spacing: -0.015em;
+  color: #FFF;
+}
+
+.home-btn-order:hover {
+  background-color: var(--primary-hover-color);
+  transform: scale(1.01);
+}
+
+.home-image svg {
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  .home-container {
+    height: auto;
+    margin-bottom: 50px;
+  }
+
+  .home-content {
+    flex-direction: column-reverse;
+  }
+
+  .home-title {
+    font-size: 40px;
+  }
+  
+  .home-subtitle {
+    text-align: center;
+  }
+
+  .home-actions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home-image {
+    text-align: center;
+  }
+
+  .home-image svg {
+    width: 80%;
+  }
+}
