--- a/web/src/App.css
+++ b/web/src/App.css
@@ -223,3 +223,21 @@ header .row.left a:hover {
 .price {
   font-size: 2rem;
 }
+
+
+/* Order Location */
+.order-location-container {
+  width: 100%;
+  max-width: 70%;
+  margin: 30px 0 120px 0;
+  padding: 20px 0;
+  height: 400px;
+  background: #FFF;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.order-location-container .leaflet-container {
+  width: 100%;
+  height: 100%;
+}
