--- a/web/src/App.css
+++ b/web/src/App.css
@@ -72,6 +72,9 @@ header {
 main {
   grid-area: main;
   padding: 1rem;
+  
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 footer {
@@ -175,7 +178,7 @@ header .row.left a:hover {
 }
 /* Product Card */
 .card-container {
-  width: 24rem;
+  width: 23rem;
   height: 46rem;
   padding: 1.3rem;
   background-color: var(--white-color);
@@ -227,17 +230,27 @@ header .row.left a:hover {
 
 /* Order Location */
 .order-location-container {
-  width: 100%;
-  max-width: 70%;
-  margin: 30px 0 120px 0;
-  padding: 20px 0;
+  width: 1000px;
   height: 400px;
+  max-width: 100%;
+  margin: 30px 1rem 120px 1rem;
+  padding: 0;
   background: #FFF;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  position: relative;
+}
+
+.order-location-container .react-select-address {
+  position: absolute;
+  top: 1rem;
+  height: 40px;
+  width: 80%;
+  z-index: 2000;
 }
 
 .order-location-container .leaflet-container {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
