--- a/web/src/App.css
+++ b/web/src/App.css
@@ -263,9 +263,12 @@ header .row.left a:hover {
 .order-location-container .react-select-address {
   position: absolute;
   top: 1rem;
-  height: 40px;
   width: 80%;
   z-index: 2000;
+}
+.order-location-container .react-select-address div {
+  border-radius: 10px;
+  padding-left: 5px;
 }
 
 .order-location-container .leaflet-container {
